<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="age">AGE</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="button">SELECT BIRTH DATE</string>
    <string name="selectedDate">0/0/0000</string>
    <string name="selected_date">Selected Date</string>
    <string name="minTillDate">0000</string>
    <string name="in_minutes_till_date">Minutes Old</string>
</resources>